--- a/views/components/adminMenu/adminMenu.ejs
+++ b/views/components/adminMenu/adminMenu.ejs
@@ -8,18 +8,18 @@
 
   <div>
     <div class="menu-option">
-      <a href="/admin/adminProfile">profile</a>
-      <a href="/category/viewCreate">create category</a>
-      <a href="/category/viewAllCategory">view all category</a>
-      <a href="/report/viewALlReports">view all reprot</a>
-      <a href="/reportComment/viewALlReportComment">view all reprot comment</a>
-      <a href="/author/viewCreateAuthor">create author</a>
-      <a href="/author/getAllAuthor">manage author</a>
-      <a href="/manga/viewAllManga">manage manga</a>
-      <a href="/user/getAllUsers">manage user</a>
-      <a href="/comment/commentHight">manage ViewComment</a>
-      <a href="/manga/viewCreateManga">manage manga author post</a>
-      <a href="/admin/Logout">log out</a>
+      <a href="/admin/adminProfile">Profile</a>
+      <a href="/category/viewCreate">Create category</a>
+      <a href="/category/viewAllCategory">View category</a>
+      <a href="/report/viewALlReports">View reprot</a>
+      <a href="/reportComment/viewALlReportComment">View reprot comment</a>
+      <a href="/author/viewCreateAuthor">Create author</a>
+      <a href="/author/getAllAuthor">Manage author</a>
+      <a href="/manga/viewAllManga">Manage manga</a>
+      <a href="/user/getAllUsers">Manage user</a>
+      <a href="/comment/commentHight">Manage view comment</a>
+      <a href="/manga/viewCreateManga">Manage manga author post</a>
+      <a href="/admin/Logout">Log out</a>
     </div>
   </div>
 </div>
