--- a/views/components/authorMenu/authorMenu.ejs
+++ b/views/components/authorMenu/authorMenu.ejs
@@ -7,9 +7,9 @@
 <div class="container">
   <div>
     <div class="menu-option">
-      <a href="/author/authorProfile">profile</a>
-      <a href="/reviewManga/viewAllManga">manage post</a>
-      <a href="/author/logout">log out</a>
+      <a href="/author/authorProfile">Profile</a>
+      <a href="/reviewManga/viewAllManga">Manage post</a>
+      <a href="/author/logout">Log out</a>
     </div>
   </div>
 </div>
