--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -7,7 +7,7 @@
             <p class="quote">Always update the fastest new series to serve readers. Read stories completely free,
                 multi-device support.
             </p>
-            <p class="contact">Email: adstruyenqq@gmail.com</p>
+            <p class="contact">Email: maivanducga@gmail.com</p>
         </div>
         <div class="footer-right">
             <div class="footer-cat">
