--- a/views/components/headerHome/headerMobile.ejs
+++ b/views/components/headerHome/headerMobile.ejs
@@ -32,7 +32,7 @@
             </div>
         </li>
         <li class="category-click ">
-            <span>category<i class="fa fa-caret-down"></i></span>
+            <span>Category<i class="fa fa-caret-down"></i></span>
             <div class="submenu_mobile cat-submenu-mobile  hidden">
                 <% category?.map((category)=>{%>
                     <a onclick="findCategory('<%=category?.id%>')">
@@ -51,7 +51,7 @@
                     <% })%>
             </div>
         </li>
-        <li class=""><a onclick="history()">history</a></li>
+        <li class=""><a onclick="history()">History</a></li>
         <li class=""><a onclick="follow()">Follow</a></li>
     </ul>
 </div>
