--- a/views/pages/Home/page/comment.ejs
+++ b/views/pages/Home/page/comment.ejs
@@ -33,7 +33,7 @@
         </div>
 
         <div class="comment_report">
-            <i class="fa-solid fa-ellipsis-vertical"></i>
+            <i class="fa-solid fa-ellipsis-vertical" style="width: 20px"></i>
             <div>
                 <p onclick="deleteComment('<%=c._id%>', '<%=c.userID.id%>', '<%=userDetail?.id%>')">Delete</p>
                 <p onclick="reportComment('<%=c._id%>')" class="report_comment">Report</p>
