--- a/views/pages/Home/review/review.ejs
+++ b/views/pages/Home/review/review.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Home</title>
+    <title>Review chap</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     </div>
     <div class="padding-common">
         <div class="item-title">
-            Chương <%=chapter.chap %> : <%=chapter.title %>
+            Chap <%=chapter.chap %> : <%=chapter.title %>
         </div>
         <div class="item-info">
             <a href="" class="item-name"><i class="fa-solid fa-book"></i>
@@ -46,7 +46,7 @@
             <%- chapter.content.slice(0,1500)%>
         </div>
         <button class="more-btn"
-            onclick="readMore('<%= user?.monney%>', '<%= mangaDetail.price%>', '<%=checked%>')">view more</button>
+            onclick="readMore('<%= user?.monney%>', '<%= mangaDetail.price%>', '<%=checked%>')">View more</button>
     </div>
     <!-- main -->
     <!-- footer -->
