--- a/views/pages/admin/manageAuthor/viewAllAuthorEjs/viewAllAuthor.ejs
+++ b/views/pages/admin/manageAuthor/viewAllAuthorEjs/viewAllAuthor.ejs
@@ -9,7 +9,7 @@
     <div class="input-group mb-3">
       <input type="text" class="form-control" id="searchUser" placeholder="Search User" aria-label="Search User" aria-describedby="basic-addon2">
       <div class="input-group-append">
-        <button onclick="searchUser()" class="btn btn-outline-secondary" type="button">search</button>
+        <button onclick="searchUser()" class="btn btn-outline-secondary" type="button">Search</button>
       </div>
     </div>
     <div class="pagination">
