--- a/views/pages/admin/manageChapter/viewDetailChapter/viewDetailChapter.ejs
+++ b/views/pages/admin/manageChapter/viewDetailChapter/viewDetailChapter.ejs
@@ -1,3 +1,4 @@
+<title>View detail chap</title>
 <div class="viewDetailChapter">
   <div class="adminMenu">
     <%- include('../../../../components/adminMenu/adminMenu.ejs') %>
