--- a/views/pages/admin/manageManga/editManga/editManga.ejs
+++ b/views/pages/admin/manageManga/editManga/editManga.ejs
@@ -34,7 +34,7 @@
       <!-- des -->
       <div class="mainUserProfile__item">
         <div class="mainUserProfile__itemLeft">
-          <h3>description</h3>
+          <h3>Description</h3>
           <p class="Des-span">
             <%= manga.description %>
           </p>
@@ -54,7 +54,7 @@
         <div class="mainUserProfile__itemLeft">
           <h3>Avatar</h3>
           <form enctype="multipart/form-data" class="changeAvatar-form">
-            <label for="change-avatar">Browse your Avatar</label>
+            <label for="change-avatar">Browse Avatar</label>
             <input type="file" name="avatar" id="change-avatar" />
           </form>
         </div>
