--- a/views/pages/admin/manageManga/viewDetailManga/viewDetailManga.ejs
+++ b/views/pages/admin/manageManga/viewDetailManga/viewDetailManga.ejs
@@ -60,8 +60,8 @@
               </a>
             </td>
             <td scope="row">
-              <button class="btn btn-warning" onclick="edichapter('<%= chapter._id %>')">edit chapter</button>
-              <button class="btn btn-danger" onclick="deleteChapter('<%= chapter._id %>')">delete chapter</button>
+              <button class="btn btn-warning" onclick="edichapter('<%= chapter._id %>')">Edit chapter</button>
+              <button class="btn btn-danger" onclick="deleteChapter('<%= chapter._id %>')">Delete chapter</button>
             </td>
           </tr>
           <%})%>
