--- a/views/pages/admin/profileAdmin/profileAdmin.ejs
+++ b/views/pages/admin/profileAdmin/profileAdmin.ejs
@@ -10,7 +10,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/views/components/adminMenu/adminMenu.css" />
   <link rel="stylesheet" href="/views/pages/admin/profileAdmin/profileAdmin.css" />
-  <title>Document</title>
+  <title>Profile</title>
 </head>
 
 <body>
