--- a/views/pages/admin/viewMangaAuthorPost/editMangaAuthorPost/editManga.ejs
+++ b/views/pages/admin/viewMangaAuthorPost/editMangaAuthorPost/editManga.ejs
@@ -1,3 +1,4 @@
+<title>Edit manga</title>
 <div class="editMangaAuthorPost">
   <div class="adminMenu">
     <%- include('../../../../components/adminMenu/adminMenu.ejs') %>
@@ -25,7 +26,7 @@
       <!-- des -->
       <div class="mainUserProfile__item">
         <div class="mainUserProfile__itemLeft">
-          <h3>description</h3>
+          <h3>Description</h3>
           <p class="Des-span">
             <%= manga.description %>
           </p>
