--- a/views/pages/admin/viewMangaAuthorPost/viewDetailMangaAuthorPost/viewDetails.ejs
+++ b/views/pages/admin/viewMangaAuthorPost/viewDetailMangaAuthorPost/viewDetails.ejs
@@ -59,8 +59,8 @@
                 </button>
 
                 <button class="btn btn-warning"
-                  onclick="edichapter('<%= chapter._id %>', '<%= chapter.stautus %>')">edit chapter</button>
-                <button class="btn btn-danger" onclick="deleteChapter('<%= chapter._id %>')">delete chapter</button>
+                  onclick="edichapter('<%= chapter._id %>', '<%= chapter.stautus %>')">Edit chapter</button>
+                <button class="btn btn-danger" onclick="deleteChapter('<%= chapter._id %>')">Delete chapter</button>
             </td>
           </tr>
           <%})%>
