--- a/views/pages/author/reviewChapter/editChapter/editChapter.ejs
+++ b/views/pages/author/reviewChapter/editChapter/editChapter.ejs
@@ -1,3 +1,4 @@
+<title>Edit chap</title>
 <div class="edichapter-author">
   <div class="adminMenu">
     <%- include('../../../../components/authorMenu/authorMenu.ejs') %>
