--- a/views/pages/author/reviewManga/createManga/createManga.ejs
+++ b/views/pages/author/reviewManga/createManga/createManga.ejs
@@ -1,3 +1,4 @@
+<title>Create manga</title>
 <div class="createManga">
   <div class="adminMenu">
     <%- include('../../../../components/authorMenu/authorMenu.ejs') %>
@@ -27,7 +28,7 @@
           placeholder="Description..."></textarea><br>
         <span>Price</span>
         <input class="form-control" type="number" name="price" id="price" placeholder="Price" /><br>
-        <button class="btn btn-primary" type="button" onclick="createManga()">submit</button>
+        <button class="btn btn-primary" type="button" onclick="createManga()">Submit</button>
       </div>
       <div class="create-form-right">
         <label for="avatar">Browse your Avatar</label>
