--- a/views/pages/author/reviewManga/editManga/editManga.ejs
+++ b/views/pages/author/reviewManga/editManga/editManga.ejs
@@ -1,3 +1,4 @@
+<title>Edit manga</title>
 <div class="editManga">
   <div class="adminMenu">
     <%- include('../../../../components/authorMenu/authorMenu.ejs') %>
@@ -12,7 +13,7 @@
           <span>Price</span>
           <input class="form-control" type="number" value="<%=manga.price%>" name="price" id="price" placeholder="Price..." />
           <br>
-          <button class="btn btn-primary" type="button" onclick="edit()">submit</button>
+          <button class="btn btn-primary" type="button" onclick="edit()">Submit</button>
       </div>
       <div class="edit-form-right">
         <label for="avatar">Choose avatar</label>
