--- a/views/pages/author/reviewManga/viewAllManga/viewAllManga.ejs
+++ b/views/pages/author/reviewManga/viewAllManga/viewAllManga.ejs
@@ -5,7 +5,7 @@
 
   <div class="mangaAuthor-post">
     <div>
-      <button class="createBtn btn btn-outline-primary" onclick="authorCreateManga()">create manga</button>
+      <button class="createBtn btn btn-outline-primary" onclick="authorCreateManga()">Create manga</button>
     </div>
     <%- include('./pagination.ejs') %>
 
