--- a/views/pages/category/createCategory/createCategory.ejs
+++ b/views/pages/category/createCategory/createCategory.ejs
@@ -9,7 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
 
-<title>Create Author</title>
+<title>Create category</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                         placeholder="input author name"></input>
                 </div>
                 <div class="menu-tex-button">
-                    <button class="signUp" onclick="Create()">register</button>
+                    <button class="signUp" onclick="Create()">Create</button>
                 </div>
             </div>
         </div>
