--- a/views/pages/category/viewAllCategory/viewAllCategory.ejs
+++ b/views/pages/category/viewAllCategory/viewAllCategory.ejs
@@ -4,16 +4,16 @@
     </div>
 
     <div class="mangaAuthor-post">
-        <div>
-            <button class="createBtn btn btn-outline-primary" onclick="authorCreateManga()">create manga</button>
+        <div style="height: 10px;">
+
         </div>
 
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">name</th>
-                    <th scope="col">description</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
                 </tr>
             </thead>
             <tbody>
