--- a/views/pages/findByCategory/findByCategory.ejs
+++ b/views/pages/findByCategory/findByCategory.ejs
@@ -30,7 +30,7 @@
     <!-- main -->
     <div class="main-container">
         <div class="main">
-            <h2><i class="fa-solid fa-flag"></i> Truyện đang thoe dõi</h2>
+            <h2><i class="fa-solid fa-flag"></i>Category</h2>
             <div class="main-content">
                 <ul class="list-item">
                     <%manga.map((m)=>{%>
@@ -41,7 +41,7 @@
                             <div class="bookname">
                                 <%=m.name%>
                             </div>
-                            <div class="lastest-chapter">Chapter 123</div>
+                            <!-- <div class="lastest-chapter">Chapter 123</div> -->
                         </li>
                         <%})%>
                 </ul>
