--- a/views/pages/user/buyed/buyed.ejs
+++ b/views/pages/user/buyed/buyed.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Home</title>
+    <title>Buyed</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <!-- main -->
     <div class="main-container">
         <div class="main">
-            <h2><i class="fa-solid fa-flag"></i> Truyện đang thoe dõi</h2>
+            <h2><i class="fa-solid fa-flag"></i>Buyed</h2>
             <div class="main-content">
                 <ul class="list-item">
                     <%buyed.map((b)=>{%>
@@ -43,7 +43,7 @@
                             <div class="bookname">
 
                             </div>
-                            <div class="lastest-chapter">Chapter 123</div>
+                            <!-- <div class="lastest-chapter">Chapter 123</div> -->
                         </li>
                         <%})%>
                 </ul>
