--- a/views/components/error.ejs
+++ b/views/components/error.ejs
@@ -1,6 +1,6 @@
-<h1>ban chan dang nhap lai de su dung tinh nang nay</h1>
+<h1>You need to login to use this feature</h1>
 
-<button onclick="viewLogin()">login</button>
+<button onclick="viewLogin()">Login</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
