--- a/views/components/headerHome/header.ejs
+++ b/views/components/headerHome/header.ejs
@@ -30,7 +30,7 @@
         <ul class="menu_pc">
             <li><a href="/">Home</a></li>
             <li class="category-hover">
-                <span>category<i class="fa fa-caret-down"></i></span>
+                <span>Category<i class="fa fa-caret-down"></i></span>
                 <div class="submenu cat-submenu">
                     <% category?.map((category)=>{%>
                         <a onclick="findCategory('<%=category?.id%>')">
@@ -49,7 +49,7 @@
                             <% })%>
                 </div>
             </li>
-            <li><a onclick="history()">history</a></li>
+            <li><a onclick="history()">History</a></li>
             <li><a onclick="follow()">Follow</a></li>
         </ul>
     </div>
