--- a/views/pages/admin/manageAuthor/viewAllAuthorEjs/paginationAuthor.ejs
+++ b/views/pages/admin/manageAuthor/viewAllAuthorEjs/paginationAuthor.ejs
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <title>Pagination</title>
+  <title>Pagination view author</title>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
     <thead class="thead-dark">
       <tr>
         <th scope="col">#</th>
-        <th scope="col">author name</th>
-        <th scope="col">email</th>
-        <th scope="col">money</th>
-        <th scope="col">action</th>
+        <th scope="col">Author name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Money</th>
+        <th scope="col">Action</th>
       </tr>
     </thead>
     <tbody>
@@ -39,7 +39,7 @@
             <button class="btn btn-<%= classBtn %>" onclick="changeStatus('<%= user._id %>')">
               <%= user.status %>
             </button>
-            <input style="width: 45%;display:inline" class="form-control" type="number" id="money<%=index  %>" name="money" placeholder="nhap so tien muon cong">
+            <input style="width: 45%;display:inline" class="form-control" type="number" id="money<%=index  %>" name="money" placeholder="Enter the amount you want to add">
             <button class="btn btn-dark" onclick="giftpoints('<%= user._id %>','<%= index %>')">+</button>
           </td>
         </tr>
