--- a/views/pages/admin/manageManga/viewAllManga/viewAllMangaEjs/paginationManga.ejs
+++ b/views/pages/admin/manageManga/viewAllManga/viewAllMangaEjs/paginationManga.ejs
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
+<title>Pagination manga</title>
 
 
 <div>
@@ -13,11 +14,11 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">name</th>
-      <th scope="col">avatar</th>
-      <th scope="col">price</th>
-      <th scope="col">author name</th>
-      <th scope="col">action</th>
+      <th scope="col">Name</th>
+      <th scope="col">Avatar</th>
+      <th scope="col">Price</th>
+      <th scope="col">Author name</th>
+      <th scope="col">Action</th>
 
     </tr>
   </thead>
@@ -39,9 +40,9 @@
           <%= manga.author.username%>
         </td>
         <td>
-          <button class="btn btn-warning" onclick="edit('<%= manga._id%>')">edit</button>
-          <button class="btn btn-primary" onclick="viewDetails('<%= manga._id%>')">view detail</button>
-          <button class="btn btn-danger" onclick="delette('<%= manga._id%>')">delete</button>
+          <button class="btn btn-warning" onclick="edit('<%= manga._id%>')">Edit</button>
+          <button class="btn btn-primary" onclick="viewDetails('<%= manga._id%>')">View detail</button>
+          <button class="btn btn-danger" onclick="delette('<%= manga._id%>')">Delete</button>
         </td>
       </tr>
       <%})%>
