--- a/views/pages/admin/manageUser/viewAllUser/viewAllUserEjs/viewAllUser.ejs
+++ b/views/pages/admin/manageUser/viewAllUser/viewAllUserEjs/viewAllUser.ejs
@@ -1,3 +1,4 @@
+<title>View Users</title>
 <div class="manageUser">
   <div class="adminMenu">
     <%- include('../../../../../components/adminMenu/adminMenu.ejs') %>
@@ -7,7 +8,7 @@
     <div class="input-group mb-3">
       <input type="text" class="form-control" id="searchUser" placeholder="Search User" aria-label="Search User" aria-describedby="basic-addon2">
       <div class="input-group-append">
-        <button onclick="searchUser()" class="btn btn-outline-secondary" type="button">search</button>
+        <button onclick="searchUser()" class="btn btn-outline-secondary" type="button">Search</button>
       </div>
     </div>
     <div class="pagination">
