--- a/views/pages/admin/viewChapterAuthorPost/editChapter/editChapter.ejs
+++ b/views/pages/admin/viewChapterAuthorPost/editChapter/editChapter.ejs
@@ -1,3 +1,4 @@
+<title>Edit chap</title>
 <div class="editMangaAuthorPost">
 
   <div class="adminMenu">
@@ -23,7 +24,7 @@
     <!-- des -->
     <div class="mainUserProfile__item">
       <div class="mainUserProfile__itemLeft">
-        <h3>content</h3>
+        <h3>Content</h3>
         <p class="Des-span">
           <%= chapter.content %>
         </p>
