--- a/views/pages/admin/viewChapterAuthorPost/viewAllChapterAuthorPost/viewAllChapterAuthorPostEjs/viewAllChapterAuthorPost.ejs
+++ b/views/pages/admin/viewChapterAuthorPost/viewAllChapterAuthorPost/viewAllChapterAuthorPostEjs/viewAllChapterAuthorPost.ejs
@@ -1,3 +1,4 @@
+<title>View chaps</title>
 <div class="viewDetailChapterAuthor">
   <div class="adminMenu">
     <%- include('../../../../components/adminMenu/adminMenu.ejs') %>
