--- a/views/pages/admin/viewMangaAuthorPost/viewMangaAuthorPostEjs/viewMangaAuthorPost.ejs
+++ b/views/pages/admin/viewMangaAuthorPost/viewMangaAuthorPostEjs/viewMangaAuthorPost.ejs
@@ -1,3 +1,4 @@
+<title>Manga author post</title>
 <div class="viewMangaAuthorPost">
   <div class="adminMenu">
     <%- include('../../../../components/adminMenu/adminMenu.ejs') %>
