--- a/views/pages/admin/viewMangaAuthorPost/viewMangaAuthorPostEjs/viewpaginationMangaAuthorPost.ejs
+++ b/views/pages/admin/viewMangaAuthorPost/viewMangaAuthorPostEjs/viewpaginationMangaAuthorPost.ejs
@@ -14,11 +14,11 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">name</th>
-      <th scope="col">avatar</th>
-      <th scope="col">price</th>
-      <th scope="col">author name</th>
-      <th scope="col">action</th>
+      <th scope="col">Name</th>
+      <th scope="col">Avatar</th>
+      <th scope="col">Price</th>
+      <th scope="col">Author name</th>
+      <th scope="col">Action</th>
     </tr>
   </thead>
   <tbody>
@@ -42,8 +42,8 @@
             <button class="btn btn-<%=classBtn%>" onclick="post('<%= manga._id%>')">
               <%= manga.stautus %>
             </button>
-            <button class="btn btn-warning" onclick="edit('<%= manga._id%>', '<%= manga.stautus %>')">edit</button>
-            <button class="btn btn-info" onclick="viewDetails('<%= manga._id%>')">view detail</button>
+            <button class="btn btn-warning" onclick="edit('<%= manga._id%>', '<%= manga.stautus %>')">Edit</button>
+            <button class="btn btn-info" onclick="viewDetails('<%= manga._id%>')">View detail</button>
         </td>
       </tr>
       <%})%>
