--- a/views/pages/admin/viewReportComment/viewReportComment.ejs
+++ b/views/pages/admin/viewReportComment/viewReportComment.ejs
@@ -1,3 +1,4 @@
+<title>View report comment</title>
 <div class="manageUser">
     <div class="adminMenu">
         <%- include('../../../components/adminMenu/adminMenu.ejs') %>
@@ -5,10 +6,7 @@
 
     <div class="use-info">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" id="searchUser" placeholder="Search User" aria-label="Search User"
-                aria-describedby="basic-addon2">
             <div class="input-group-append">
-                <button onclick="searchUser()" class="btn btn-outline-secondary" type="button">search</button>
             </div>
         </div>
         <!DOCTYPE html>
@@ -30,12 +28,12 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">ten nguoi dung</th>
-                        <th scope="col">email</th>
-                        <th scope="col">manga name</th>
-                        <th scope="col">content report</th>
-                        <th scope="col">date</th>
-                        <th scope="col">action</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Manga name</th>
+                        <th scope="col">Content report</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -51,7 +49,7 @@
                                 <%= report.userID?.email %>
                             </td>
                             <td>
-                                <%= report.idComment.title%>
+                                <%= report.idComment?.title%>
                             </td>
                             <td>
                                 Invalid language
@@ -61,8 +59,9 @@
                             </td>
                             <td>
                                 <% let classBtn=(report.status==='chưaxem' ) ? 'danger' : 'success' %>
-                                    <button class="btn btn-<%= classBtn %>" onclick="changeStatus('<%= report._id %>')">
-                                        <%= report.status %>
+                                    <button class="btn btn-<%= classBtn %>"
+                                        onclick="delete1('<%= report.idComment?._id %>')">
+                                        <%= report.status %>Delete comment
                                     </button>
                             </td>
                         </tr>
@@ -79,4 +78,4 @@
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link rel="stylesheet" href="/views/pages/admin/viewReport/viewReport.css">
-<!-- <script src="/views/pages/admin/viewReport/viewReport.js"></script> -->
+<script src="/views/pages/admin/viewReportComment/reportComment.js"></script>
