--- a/views/pages/author/profileAuthor/profileAuthor.ejs
+++ b/views/pages/author/profileAuthor/profileAuthor.ejs
@@ -9,7 +9,7 @@
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/views/pages/author/profileAuthor/profileAuthor.css" />
-  <title>Document</title>
+  <title>Profile</title>
 </head>
 
 <body>
