--- a/views/pages/author/reviewChapter/createChapter/createChapter.ejs
+++ b/views/pages/author/reviewChapter/createChapter/createChapter.ejs
@@ -1,3 +1,4 @@
+<title>Create Chap</title>
 <div class="create-chapter">
   <div class="adminMenu">
     <%- include('../../../../components/authorMenu/authorMenu.ejs') %>
@@ -7,7 +8,7 @@
     <h1>Create chapter</h1>
     <input class="form-control" type="text" id="title" placeholder="title" /><br>
     <textarea class="form-control z-depth-1" id="content" rows="3" placeholder="Content"></textarea><br>
-    <button class="btn btn-primary" onclick="createChapter()">create chapter</button>
+    <button class="btn btn-primary" onclick="createChapter()">Create chapter</button>
   </div>
 </div>
 
