--- a/views/pages/author/reviewChapter/viewDetailChapter/viewDetailChapter.ejs
+++ b/views/pages/author/reviewChapter/viewDetailChapter/viewDetailChapter.ejs
@@ -1,3 +1,4 @@
+<title>View detail chap</title>
 <div class="viewDetailChapter">
   <div class="adminMenu">
     <%- include('../../../../components/authorMenu/authorMenu.ejs') %>
